Refresh labs, decks/pdf, supplementary_material, and README from bootcamp (no slides).